# django-example

./: .env.new  entrypoint.sh  pyproject.toml
app/: settings.py  urls.py
main/: views.py
